manifests/app/seaman/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seaman
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: seaman
