manifests/app/seaman/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: seaman
spec:
  virtualhost:
    fqdn: seaman.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: seaman
        port: 8080
